fixed the scrollbar jump after load animation

--- a/apps/client/src/styles/tailwind.css
+++ b/apps/client/src/styles/tailwind.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    overflow-y: scroll;
+  }
+}
+
 @layer utilities {
   .scrollbar-hide::-webkit-scrollbar {
     display: none;
